// Vitest Snapshot v1

exports[`Options > resolve > react 1`] = `
{
  "caseSensitive": false,
  "dirs": [
    {
      "baseRoute": "",
      "dir": "examples/react/src/pages",
    },
  ],
  "exclude": [],
  "extendRoute": undefined,
  "extensions": [
    "tsx",
    "jsx",
  ],
  "extensionsRE": /\\\\\\.\\(tsx\\|jsx\\)\\$/,
  "importMode": "sync",
  "onClientGenerated": undefined,
  "onRoutesGenerated": undefined,
  "resolver": "react",
  "root": Any<String>,
  "routeBlockLang": "json5",
  "routeStyle": "next",
  "syncIndex": true,
}
`;

exports[`Options > resolve > vue 1`] = `
{
  "caseSensitive": false,
  "dirs": [
    {
      "baseRoute": "",
      "dir": "examples/vue/src/pages",
    },
  ],
  "exclude": [],
  "extendRoute": undefined,
  "extensions": [
    "vue",
    "ts",
    "js",
  ],
  "extensionsRE": /\\\\\\.\\(vue\\|ts\\|js\\)\\$/,
  "importMode": "async",
  "onClientGenerated": undefined,
  "onRoutesGenerated": undefined,
  "resolver": "vue",
  "root": Any<String>,
  "routeBlockLang": "json5",
  "routeStyle": "next",
  "syncIndex": true,
}
`;
